--- a/NanoUDP  BU/.classpath
+++ b/NanoUDP  BU/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path=""/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Program Files/Java/jdk1.8.0_111/jre/lib/sqljdbc4-2.0.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
