--- a/NanoUDP  BU/.gitignore
+++ b/NanoUDP  BU/.gitignore
@@ -12,3 +12,10 @@
 /ParseoDB$db.class
 /db.class
 /DataBase.class
+/winds$1.class
+/winds.class
+/consoleToText.class
+/winds$2.class
+/ventana.class
+/jFrame$1.class
+/jFrame.class
